@@ -35,6 +35,8 @@
     org/apache/lucene/index/TestIndexWriterOnJRECrash.class
   "/>
 
+  <!-- lucene core can use the minimal JDK profile -->
+  <property name="javac.profile.args" value="-profile compact1"/>
   <import file="../common-build.xml"/>
 
   <property name="moman.commit-hash" value="5c5c2a1e4dea" />
