@@ -29,6 +29,7 @@
   <property name="javac.source" value="1.8"/>
   <property name="javac.target" value="1.8"/>
   <property name="javac.args" value=""/>
+  <property name="javac.profile.args" value=""/>
 
   <property name="dest" location="${common-solr.dir}/build" />
   <property name="build.dir" location="${dest}/${ant.project.name}"/>
